2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (run), (try):
	use ref/unref pair to stop backend from going away when the mount
	fails

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (mount_failed):
	no g_warning for failed monts, please

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjob.c: (g_vfs_job_failed_from_error):
	* daemon/gvfsjob.h:
	make the error argument const

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
	Use standard lock instead of recursive lock.

2008-02-25  David Zeuthen  <davidz@redhat.com>

	* configure.ac: fix typo in AC_ARG_ENABLE for gphoto2

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
        * daemon/dbus-gmain.c:
	Only use dbus_watch_get_unix_fd for
	dbus >= 1.1.1

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.8 ===

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* programs/Makefile.am (EXTRA_DIST):
	Add gvfs-bash-completion.sh

	* NEWS:
	Update for release

2008-02-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c:
	* daemon/gvfsbackendsmb.c:
	Update to gvfskeyring api changes

	* daemon/gvfskeyring.c:
	* daemon/gvfskeyring.h:
	Add object, authtype and port parameters for both save and
	lookup. 
	
2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Initial take on implementing delete.

	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Add http_error_code_from_status helper function.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Also check if the URL is a directory by doing a PROPFIND in
	addition to the OPTIONS. That will also force authentication
	since some servers (e.g. Zope) allow OPTIONS without doing
	authentication.

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * client/sftpuri.c: